--- a/neonrpg/neonrpg.csproj
+++ b/neonrpg/neonrpg.csproj
@@ -6,18 +6,21 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Update="Properties\Resources.Designer.cs">
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
+    <None Remove="Assets\doors.nano" />
+    <None Remove="Assets\doors_42.nano" />
+    <None Remove="Assets\Levels\doors.nano" />
+    <None Remove="Assets\Levels\doors_42.nano" />
+    <None Remove="Assets\Levels\doors_42_Data\npc0.json" />
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Update="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
+    <EmbeddedResource Include="Assets\Levels\doors.nano" />
+    <EmbeddedResource Include="Assets\Levels\doors_42.nano" />
+    <EmbeddedResource Include="Assets\Levels\doors_42_Data\npc0.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
 </Project>
